Make sure body is always visible - weird reasons webdevs do things

--- a/media/css/do.css
+++ b/media/css/do.css
@@ -31,6 +31,7 @@ position: static !important;
 }
 
 @media screen {
+body { visibility:visible !important; }
 body.on-document-menu > *:not([class~="on"]) {
 opacity:0.5;
 transition:opacity 1s ease-in-out;
